<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.elon.hypesphere</groupId>
    <artifactId>hypesphere-search</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>hypesphere-search</name>
    <description>hypesphere-search</description>

    <!--   导入依赖 	-->
    <dependencies>
        <!--  hypesphere-common  -->
        <dependency>
            <groupId>com.elon.hypesphere</groupId>
            <artifactId>hypesphere-common</artifactId>
            <version>0.0.1-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-data-redis</artifactId>>
                </exclusion>
                <exclusion>
                    <groupId>org.redisson</groupId>
                    <artifactId>redisson-spring-boot-starter</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Elasticsearch Java Client (必需) -->
        <dependency>
            <groupId>co.elastic.clients</groupId>
            <artifactId>elasticsearch-java</artifactId>
            <version>8.11.4</version>
        </dependency>

        <!-- elasticsearch-rest-high-level-client   -->
        <dependency>
            <groupId>org.elasticsearch.client</groupId>
            <artifactId>elasticsearch-rest-high-level-client</artifactId>
            <version>7.17.4</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
